# mcp-guardrails

./: .__probe_tmp  .gitignore  .mise.toml  .probe_whitespace_test  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docs-requirements.txt  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json5  requirements.txt  server.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  docs.yaml  field-test.yml  pr.yml  release-please.yml  release.yml  schedule-cleanup.yaml
deploy/k8s/: agentgateway-policy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  service.yaml
docs/: compliance.md  configuration.md  deployment.md  development.md  e2e.md  getting-started.md  index.md  security-model.md
docs/guardrails/: agent-alignment.md  index.md  invariant-rules.md  promptguard.md  redaction.md  regex-scanner.md  scan-coverage.md  tool-acl.md
docs/operations/: auditing.md  health.md  metrics.md  review-webhook.md
docs/prompt/: plan.md
docs/stylesheets/: extra.css
examples/: agentgateway-local.yaml  agentgateway.standalone.yaml  docker-run.env  mcp_pii_upstream.py  rules.policy
guardrails/: __init__.py  config.py  engine.py  invariant.py  models.py  notify.py  otel.py  redaction.py  scanners.py  servicer.py
guardrails/rules/: __init__.py  default.py
proto/: ext_mcp.proto  ext_mcp_pb2.py  ext_mcp_pb2_grpc.py
scripts/: e2e_agentgateway.sh  gen_sbom.sh  guardrail_ctl.py  pip-audit-ignore.txt  proto_check.py  version_check.py
tests/: conftest.py  e2e_smoke.py  field_test.py  helpers.py  load_test.py  test_engine.py  test_guardrail_ctl.py  test_hardening_p1.py  test_invariant.py  test_notify.py  test_otel.py  test_property.py  test_redaction.py  test_redteam.py  test_scanner_redaction.py  test_scanners.py  test_server_module.py  test_servicer.py  test_wave1_followups.py  test_wave1_hardening.py  test_wave2_audit.py  test_wave3_contract.py  test_wave3_rules.py  test_wave3_scanners.py  test_wave4_hardening.py
