[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extmcp-guardrail"
version = "0.1.0"
description = "ExtMcp gRPC guardrail sidecar for agentgateway — LlamaFirewall + Invariant Guardrails"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Soul Whisper" }]
keywords = ["agentgateway", "mcp", "guardrails", "llamafirewall", "invariant", "llm-security"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.62,<2",
    "grpcio-health-checking>=1.62,<2",
    "protobuf>=4.25,<8",
]

[project.optional-dependencies]
# Heavy ML stack — installed in the container image, NOT required for the
# pure-Python policy core or the unit tests.
ml = [
    "llamafirewall>=0.9.0",
    "transformers>=4.45.0",
    "torch>=2.2.0",
]
otel = [
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "grpcio-tools>=1.62,<2",
]

[project.urls]
Homepage = "https://github.com/soulwhisper/extmcp-guardrail"
Issues = "https://github.com/soulwhisper/extmcp-guardrail/issues"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["guardrails*"]
exclude = ["tests*", "proto*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end tests requiring a live gRPC server",
]
filterwarnings = [
    "error",
    'ignore::DeprecationWarning:grpc.*',
]

# ---------------------------------------------------------------------------
# ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["proto/ext_mcp_pb2.py", "proto/ext_mcp_pb2_grpc.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "SIM",            # simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default argument (dataclass field factories)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B017"]
"server.py" = ["E402"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["guardrails", "server"]
omit = ["guardrails/proto_bridge.py", "proto/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
