[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-guardrails"
version = "0.3.1"
description = "ExtMcp gRPC guardrail sidecar for agentgateway — ONNX PromptGuard + Invariant Guardrails"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Soul Whisper" }]
keywords = ["agentgateway", "mcp", "guardrails", "promptguard", "onnx", "llm-security"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.62,<2",
    "grpcio-health-checking>=1.62,<2",
    # protobuf 5.x and 6.x are both runtime-compatible for our generated stubs.
    "protobuf>=5.29,<7",
    # OpenTelemetry — always available; degrades gracefully to audit-log-only
    # when no OTLP endpoint is configured.
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
]

[project.optional-dependencies]
# ONNX PromptGuard — the primary semantic scanner. Uses the public, non-gated
# ONNX model (gravitee-io/Llama-Prompt-Guard-2-86M-onnx) via ONNX Runtime.
# Truly torch-free: we load the .onnx graph with onnxruntime directly and
# tokenise with transformers (tokenizer-only — no torch extra). optimum is
# intentionally NOT used because it hard-requires torch (~750MB).
# hf_transfer enables parallel chunked downloads (HF_HUB_ENABLE_HF_TRANSFER=1).
onnx = [
    "transformers>=4.51.3",
    "onnxruntime>=1.20.0",
    "huggingface-hub>=0.30.2",
    "hf_transfer>=0.1.6",
]

# AgentAlignment LLM — opt-in second-stage deep inspection. Calls an
# OpenAI-compatible LLM API when PromptGuard flags HUMAN_REVIEW.
alignment = [
    "openai>=1.76.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "grpcio-tools>=1.81,<1.82",
]

[project.urls]
Homepage = "https://github.com/soulwhisper/mcp-guardrails"
Issues = "https://github.com/soulwhisper/mcp-guardrails/issues"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["guardrails*"]
exclude = ["tests*", "proto*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end tests requiring a live gRPC server",
]
filterwarnings = [
    "error",
    'ignore::DeprecationWarning:grpc.*',
]

# ---------------------------------------------------------------------------
# ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["proto/ext_mcp_pb2.py", "proto/ext_mcp_pb2_grpc.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "SIM",            # simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default argument (dataclass field factories)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B017"]
"server.py" = ["E402"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["guardrails", "server"]
omit = ["guardrails/proto_bridge.py", "proto/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
