[project]
name = "mcp-guardrails"
version = "0.3.4"
description = "agentgateway ExtMcp guardrail sidecar — PromptGuard + Invariant rules behind a gRPC policy server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "soulwhisper" }]
keywords = ["mcp", "guardrail", "promptguard", "invariant", "grpc", "agentgateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # --- gRPC stack (wire-compat critical) ---
    "grpcio>=1.82.1,<2",
    "grpcio-health-checking>=1.82.1,<2",
    # protobuf runtime must be at least as new as the gencode embedded in
    # proto/ext_mcp_pb2.py (grpcio-tools 1.82.1 -> protobuf 7.35.x gencode).
    "protobuf>=7.35",
    # --- Transformers + ONNX Runtime for PromptGuard-2-86M inference ---
    "transformers>=4.51.3",
    "onnxruntime>=1.20.0",
    # --- OpenAI client for AgentAlignment LLM (second-stage, opt-in) ---
    "openai>=1.76.0",
    # --- HuggingFace Hub (model downloads at image-build time) ---
    "huggingface-hub>=0.30.2",
    # --- hf-xet: Xet storage client for HF Hub downloads (auto-detected). ---
    "hf-xet>=1.5",
    # --- OpenTelemetry (optional at runtime; sidecar degrades to stdout audit
    #     if these are absent) ---
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
]

[project.optional-dependencies]
# Dev deps WITHOUT the heavy ML stack (onnxruntime/torch/transformers) so that
# `pip install -e .[dev]` and `make test` run in regex-only mode. CI uses this
# extra for the same reason — see .github/workflows/ci.yml.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "grpcio-tools>=1.82.1,<1.83",
]

[project.scripts]
mcp-guardrails = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guardrails", "proto"]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Fail on unknown marks and bad ini keys so typos don't silently disable tests.
addopts = "--strict-markers --strict-config"
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["guardrails", "proto"]

[tool.ruff.lint.per-file-ignores]
# Generated protobuf stubs are not linted (third-party style).
"proto/*_pb2*.py" = ["E", "F"]

[tool.coverage.run]
branch = true
source = ["guardrails", "server"]
omit = ["proto/*_pb2*.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:",
    "def __repr__",
]
